syntax = "proto3";
package saonetwork.sao.sao;

import "gogoproto/gogo.proto";
import "sao/params.proto";
import "sao/order.proto";
import "sao/shard.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/SaoNetwork/sao/x/sao/types";

// GenesisState defines the sao module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Order orderList = 2 [(gogoproto.nullable) = false];
  uint64 orderCount = 3;
  repeated Shard shardList = 4 [(gogoproto.nullable) = false];
  uint64 shardCount = 5;
  // this line is used by starport scaffolding # genesis/proto/state
}
